# measurement-kit

./: .appveyor.yml  .clang-format  .drone.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  Android.mk  Application.mk  BUGS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChangeLog.md  Doxyfile  LICENSE  LibNeubot.java  Makefile.am  Makefile.in  NOTICE  README.md  TODO.md  TODO.rst  Vagrantfile  XO  _libight.py  acinclude.m4  appveyor.yml  autogen.sh  build_ios.sh  circle.yml  config.local  configure  configure.ac  connection.cpp  connection.h  echo.c  gen_cxx  gen_header  (+39 more)
.ci/: README.md
.ci/appveyor/: README.md  msvc.bat  msys2.bat  msys2.sh  msys2_build.bat  msys2_build.sh
.ci/docker/: README.md  cmake  setup
.ci/travis/: AUTHORS  README.md
.github/workflows/: build.yml  docker.yml  vanilla.yml
cmake/: .gitignore  AutoGenerated.cmake  AutoGeneratedTargets.cmake  BinSources.txt  Common.cmake  Examples.cmake  LibMeasurementKit.cmake  LibSources.txt  MeasurementKit.cmake  Tests.cmake  configure.cmake  make.cmake
cmake/utils/: DownloadDeps.cmake
doc/: README.md  coding-style.md  codying-style.md  index.md  mk-ctrl.md
doc/api/: common.md  dns.md  ext.md  http.md  index.md  json.md  mlabns.md  ndt.md  net.md  nettests.md  ooni.md  report.md  traceroute.md
doc/common/: async.md  constraints.md  error.md  evbuffer.md  libs.md  net_test.md
doc/dns/: response.md
doc/net/: buffer.md
doc/tutorial/: android.md  ios.md  unix.md
example/: README.md  dns_injection.cpp  include.am
example/common/: .gitignore  fapply.cpp  fapply_with_callback.cpp  fcompose.cpp  libevent-poller.cpp  poller-tor.cpp  socket.cpp
example/dns/: .gitignore  getaddrinfo.cpp  ping.cpp  query.cpp
example/engine/: .gitignore  ndt.cpp  ndt_ffi.cpp  web_connectivity.cpp
example/ffi/: .gitignore  ndt.cpp  web_connectivity.cpp
example/http/: .gitignore  client_dash.cpp  include.am  request.cpp
example/libevent/: discard.cpp  listen.cpp
example/lua_engine/: run.cpp
example/mlabns/: .gitignore  include.am  query.cpp
example/ndt/: ndt  ndt.cpp
example/net/: .gitignore  bev-connect.cpp  bev-transport-http-09.cpp  connect.cpp  discard  discard.cpp  filter.cpp  listen.cpp  transport.cpp
example/nettest/: .gitignore  ndt.cpp  web_connectivity.cpp
example/nettests/: .gitignore  multithread.cpp  simple.cpp
example/neubot/: client_dash  client_dash.cpp  dash  dash.cpp
example/ooni/: .gitignore  dns_injection.cpp  http_invalid_request_line.cpp  include.am  oonireport.cpp  ooniresources.cpp  oorchestrate.cpp  oorchestrate_bis.cpp  tcp_connect.cpp  web_connectivity.cpp
example/script/: lua.cpp
example/scripting/: chai.cpp
example/swig/: ndt.cpp  web_connectivity.cpp
example/tor/: authenticate.cpp  getinfo-status-bootstrap-phase.cpp  setconf-disable-network.cpp
include/measurement_kit/: README.md  cmdline.hpp  common.hpp  cxx14.hpp  dns.hpp  engine.h  ext.hpp  ffi.h  ffi_macros.h  http.hpp  json.hpp  lua_engine.hpp  mlabns.hpp  native.hpp  ndt.hpp  net.hpp  nettest.hpp  nettests.hpp  neubot.hpp  ooni.hpp  report.hpp  script.hpp  scripting.hpp  swig.hpp  tor.hpp  traceroute.hpp
libneubot_python/: README  libneubot_python.py  neubot.i  neubot_wrap.cxx  neubot_wrap.h  setup.py
m4/: measurement_kit.m4  mk.m4
mobile/android/: .gitignore  README.md  build.sh
mobile/ios/: LICENSE  README.md
santhoshnathan/: something.3.cpp
script/: README.md  gen-ffi-macros  pretty_report.py  release  update-includes
script/autoapi/: README.md  autoapi  engine.cpp.j2  ffi_macros.h.j2  nettest.hpp.j2  nettests-ffi.hpp.j2  nettests.hpp.j2
script/autogen.d/: ca-bundle  geoip
script/builtin-ca-bundle/: install
script/cmake/: README.md  autogen  run
script/ninja/: gen  gen-build  gen-build-examples  gen-build-libmk  gen-build-mk  gen-build-tests  gen-rules  gen-rules-gcc  rules.gcc.in  rules.mscv.ninja
scripts/: gen_header  gen_python  update-deps.sh
src/: ight_wrappers.cpp  ight_wrappers.h  include.am  tor.cpp  tor.hpp
src/chai/: dns.chai
src/common/: async.cpp  bufferevent.hpp  check_connectivity.cpp  check_connectivity.hpp  constraints.hpp  delayed_call.cpp  delayed_call.hpp  easy.cpp  emitter.hpp  error.h  evbuffer.cpp  include.am  libevent.cpp  libevent.h  libs.cpp  libs_impl.hpp  log.c  log.cpp  log.h  logger.cpp  mock.hpp  net_test.cpp  net_test_dsl.cpp  parallel.cpp  pointer.hpp  poller-interface.hpp  poller-libevent.cpp  poller-libevent.hpp  poller-tor.cpp  poller-tor.hpp  poller.c  poller.cpp  poller.h  poller.hpp  reactor.cpp  runner.cpp  settings.hpp  string_vector.cpp  stringvector.cpp  stringvector.h  (+4 more)
src/dns/: dns.cpp  error.cpp  getaddrinfo.cpp  getaddrinfo.hpp  include.am  query.cpp  query.hpp  query_impl.hpp  resolver.cpp  response.cpp
src/empty/: .gitignore
src/ext/: include.am  jsoncpp.hpp  strtonum.c  strtonum.h  tls_internal.h  tls_verify.c  tls_verify.h
src/http/: client.cpp  http.cpp  include.am  parse_url.cpp  request.cpp  request.hpp  request_impl.hpp  request_serializer.cpp  request_serializer.hpp  response_parser.cpp  response_parser.hpp  stream.hpp
src/libmeasurement_kit/: engine.cpp  engine.hpp  ffi.cpp  ffi.hpp  ffi_macros.h  swig.cpp
src/lua/: dns.lua
src/lua_engine/: run.cpp
src/measurement_kit/: cmdline.hpp  main.cpp  utils.cpp
src/mlabns/: mlabns.cpp  mlabns.hpp  mlabns_impl.hpp
src/ndt/: client.cpp  client.hpp  client_impl.hpp  context.hpp  definitions.hpp  internal.hpp  messages.cpp  messages.hpp  messages_impl.hpp  ndt_test.cpp  protocol.cpp  protocol.hpp  protocol_impl.hpp  run.cpp  run_impl.hpp  test-c2s.cpp  test-c2s.hpp  test-meta.cpp  test-meta.hpp  test-s2c.cpp  test-s2c.hpp  test_c2s.cpp  test_c2s.hpp  test_c2s_impl.hpp  test_meta.cpp  test_meta.hpp  test_meta_impl.hpp  test_s2c.cpp  test_s2c.hpp  (+1 more)
test/: Makefile  callback.py  callback1.py  connection.py  dns.py  dns1.py  echo.py  echo1.py  echo_client.cpp  echo_client2.c  echo_client_evbuf.cpp  include.am  main.cpp  pollable.py  pollable1.py  poller.py  poller1.py  self_connection.py  stringvector.py  tests.cpp  typesafety.py  winsock.hpp
(+1245 files in other folders)
